# aspect-lint-rc1-repro

./: .bazelrc  .bazelversion  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bzlmod  aspect_rules_lint_attr.patch  aspect_rules_lint_gitattibute.patch
